# EMB4project-TreadMill

./: .gitignore  Rules.make
common/: MarkerMessage.pb.cpp  MarkerMessage.proto
encoder/: .encoder.ko.cmd  .encoder.mod.o.cmd  .encoder.o.cmd  Makefile  encoder.c  encoder.ko  encoder.mod.c  modules.order
encoder/.tmp_versions/: encoder.mod
marker_detection_desktop_test_application/: CMakeLists.txt  main_desktop.cpp
marker_detector/: Makefile  Marker.cpp  Marker.hpp  MarkerMessage.pb.h  find_markers.cpp  find_markers.hpp  main.cpp  marker_detector
treadmill_controller/: Makefile  main.cpp  serial.c  serial.h
